--- a/regression/homework.ipynb
+++ b/regression/homework.ipynb
@@ -937,69 +937,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = df_train_0.values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 259,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ones = np.ones(X.shape[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 260,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(29337, 7)"
-      ]
-     },
-     "execution_count": 260,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 261,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X = np.column_stack([ones,X])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 262,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(29337, 8)"
-      ]
-     },
-     "execution_count": 262,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X.shape"
+    "X_0 = df_train_0.values"
    ]
   },
   {
@@ -1011,11 +953,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [],
    "source": [
     "def train_linear(X,y):\n",
+    "    ones = np.ones(X.shape[0])\n",
+    "    X = np.column_stack([ones,X])\n",
+    "    \n",
     "    XTX = X.T.dot(X)\n",
     "    XTX_inv = np.linalg.inv(XTX)\n",
     "    w_full = XTX_inv.dot(X.T).dot(y_train)\n",
@@ -1024,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [
     {
@@ -1035,13 +980,36 @@
        "        -8.25470066e-03,  1.33371320e-03,  6.50203890e-04]))"
       ]
      },
-     "execution_count": 268,
+     "execution_count": 276,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_linear(X,y_train)"
+    "train_linear(X_0,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train LR with missing values replaced with mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_m = df_train_m.values"
    ]
   },
   {
@@ -1056,35 +1024,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def train_linear(X,y):\n",
+    "    ones = np.ones(X.shape[0])\n",
+    "    X = np.column_stack([ones,X])\n",
+    "    \n",
+    "    XTX = X.T.dot(X)\n",
+    "    XTX_inv = np.linalg.inv(XTX)\n",
+    "    w_full = XTX_inv.dot(X.T).dot(y_train)\n",
+    "    return w_full[0], w_full[1:]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "train_linear(X_m,y_train)"
+   ]
   },
   {
    "cell_type": "code",
